// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginScreen matches snapshot in dev mode 1`] = `
<View
  style={
    {
      "backgroundColor": "#2A1B8C",
      "flex": 1,
    }
  }
  testID="screen-container"
>
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "space-between",
        "padding": 24,
      }
    }
    testID="content-container"
  >
    <View
      style={
        {
          "alignItems": "center",
          "marginTop": 80,
        }
      }
      testID="logo-container"
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 60,
            "elevation": 8,
            "height": 120,
            "justifyContent": "center",
            "marginBottom": 24,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 4.65,
            "width": 120,
          }
        }
        testID="logo-placeholder"
      >
        <Text
          style={
            {
              "color": "#2A1B8C",
              "fontSize": 48,
              "fontWeight": "bold",
            }
          }
        >
          DB
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontWeight": "bold",
            "marginBottom": 8,
            "textAlign": "center",
          }
        }
        testID="app-title"
        variant="headlineMedium"
      >
        Charmr
      </Text>
      <Text
        style={
          {
            "color": "#FFFFFF",
            "opacity": 0.9,
            "textAlign": "center",
          }
        }
        testID="app-subtitle"
        variant="bodyLarge"
      >
        Your AI-powered dating assistant
      </Text>
    </View>
    <View
      style={
        {
          "gap": 16,
          "marginBottom": 40,
        }
      }
      testID="button-container"
    >
      <Button
        labelStyle={
          {
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
        mode="contained"
        onPress={[Function]}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "paddingVertical": 8,
          }
        }
        testID="login-button"
        textColor="#4B2EFF"
      >
        Login
      </Button>
      <Button
        labelStyle={
          {
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
        mode="outlined"
        onPress={[Function]}
        style={
          {
            "borderColor": "#FFFFFF",
            "borderWidth": 2,
            "paddingVertical": 8,
          }
        }
        testID="get-started-button"
        textColor="#FFFFFF"
      >
        Get Started
      </Button>
      <Button
        mode="text"
        onPress={[Function]}
        style={
          {
            "marginTop": 8,
          }
        }
        testID="skip-to-home-button"
        textColor="#FFFFFF"
      >
        Skip to Home (Dev Mode)
      </Button>
    </View>
  </View>
</View>
`;

exports[`LoginScreen matches snapshot in normal mode 1`] = `
<View
  style={
    {
      "backgroundColor": "#2A1B8C",
      "flex": 1,
    }
  }
  testID="screen-container"
>
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "space-between",
        "padding": 24,
      }
    }
    testID="content-container"
  >
    <View
      style={
        {
          "alignItems": "center",
          "marginTop": 80,
        }
      }
      testID="logo-container"
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 60,
            "elevation": 8,
            "height": 120,
            "justifyContent": "center",
            "marginBottom": 24,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 4.65,
            "width": 120,
          }
        }
        testID="logo-placeholder"
      >
        <Text
          style={
            {
              "color": "#2A1B8C",
              "fontSize": 48,
              "fontWeight": "bold",
            }
          }
        >
          DB
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontWeight": "bold",
            "marginBottom": 8,
            "textAlign": "center",
          }
        }
        testID="app-title"
        variant="headlineMedium"
      >
        Charmr
      </Text>
      <Text
        style={
          {
            "color": "#FFFFFF",
            "opacity": 0.9,
            "textAlign": "center",
          }
        }
        testID="app-subtitle"
        variant="bodyLarge"
      >
        Your AI-powered dating assistant
      </Text>
    </View>
    <View
      style={
        {
          "gap": 16,
          "marginBottom": 40,
        }
      }
      testID="button-container"
    >
      <Button
        labelStyle={
          {
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
        mode="contained"
        onPress={[Function]}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "paddingVertical": 8,
          }
        }
        testID="login-button"
        textColor="#4B2EFF"
      >
        Login
      </Button>
      <Button
        labelStyle={
          {
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
        mode="outlined"
        onPress={[Function]}
        style={
          {
            "borderColor": "#FFFFFF",
            "borderWidth": 2,
            "paddingVertical": 8,
          }
        }
        testID="get-started-button"
        textColor="#FFFFFF"
      >
        Get Started
      </Button>
    </View>
  </View>
</View>
`;
